resolved ellipse width and height which caused footer dis-alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,8 +87,8 @@ html {
     position: absolute;
     z-index: -1;
     background: var(--ellipse-gradient);
-    width: 900px;
-    height: 900px;
+    width: 800px;
+    height: 600px;
     filter: blur(12rem);
     top: -10rem;
     left: 2rem;
@@ -97,8 +97,7 @@ html {
 
 @media screen and (min-width: 1140px) {
   .ellipse::before {
-    width: 1100px;
-    height: 1100px;
+    height: 800px;
     top: -10rem;
     left: -1rem;
   }
@@ -106,8 +105,8 @@ html {
 
 @media screen and (min-width: 1350px) {
   .ellipse::before {
-    width: 900px;
-    height: 900px;
+    width: 750px;
+    height: 750px;
     top: -5rem;
     left: 15rem;
   }
